...
                    )
                ) {
                    Screen(text: "Screen 1", color: Color(.systemBlue)) {
                        Button("Go to tab 2") {
                            self.currentTab = .tab2
                        }
                        .accessibility(identifier: "GoToTab2Button")
                    }
                }
                TabModal {
                    Image(systemName: "plus.circle.fill")
                        .resizable()
                        .aspectRatio(contentMode: .fit)
...
                    tabItem: TabItemContent(systemImageName: "gear", text: "Tab item 2", font: Font.system(size: 16))
                ) {
                    Screen(text: "Screen 2", color: Color(.systemRed)) {
                        Button("Go to tab 1") {
                            self.currentTab = .tab1
                        }
                        .accessibility(identifier: "GoToTab1Button")
                    }
                }
            }
        }
        .accessibilityElement(children: .contain)
        .accessibility(identifier: "TabBarWith3ElementsWithProgrammaticTabChange")
...
